objects/Expense_Member__c.object
<CustomObject>
    <fields>
        <fullName>Contribution_Amount__c</fullName>
        <label>Contribution Amount</label>
        <precision>15</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>Expense Member</relationshipLabel>
        <relationshipName>Expense_Member1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <description>Member are their</description>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Expense Member</relationshipLabel>
        <relationshipName>Expense_Member</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Your_Email__c</fullName>
        <description>Here is your Email id</description>
        <label>Your Email</label>
        <type>Email</type>
    </fields>
    <label>Expense Member</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Expense mem id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Member_payment_rule</fullName>
        <active>true</active>
        <errorConditionFormula>Contribution_Amount__c &gt; ( Expense__r.Amount__c - Expense__r.total_contribution__c )</errorConditionFormula>
        <errorDisplayField>Contribution_Amount__c</errorDisplayField>
        <errorMessage>Amount exceed the total amount</errorMessage>
    </validationRules>
</CustomObject>